crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@166.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TYPE rngfunc_rescan_t AS (i integer, s bigint);"
---
CompositeTypeStmt@0..54
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  TypeP@7..11 "TYPE"
  Whitespace@11..12 " "
  RangeVar@12..28
    Ident@12..28 "rngfunc_rescan_t"
  Whitespace@28..29 " "
  As@29..31 "AS"
  Whitespace@31..32 " "
  Ascii40@32..33 "("
  ColumnDef@33..42
    Ident@33..34 "i"
    Whitespace@34..35 " "
    TypeName@35..42
      Integer@35..42 "integer"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  ColumnDef@44..52
    Ident@44..45 "s"
    Whitespace@45..46 " "
    TypeName@46..52
      Bigint@46..52 "bigint"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

