crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@174.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM (VALUES (1),(2),(3)) v(r) LEFT JOIN rngfunc_mat(11,13) ON (r+i)<100;"
---
SelectStmt@0..82
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  JoinExpr@15..81
    RangeSubselect@15..38
      SelectStmt@15..32
        Values@15..21 "VALUES"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        List@23..24
          AConst@23..24
            Iconst@23..24 "1"
        Ascii41@24..25 ")"
        Ascii44@25..26 ","
        Ascii40@26..27 "("
        List@27..28
          AConst@27..28
            Iconst@27..28 "2"
        Ascii41@28..29 ")"
        Ascii44@29..30 ","
        Ascii40@30..31 "("
        List@31..32
          AConst@31..32
            Iconst@31..32 "3"
      Ascii41@32..33 ")"
      Ascii41@33..34 ")"
      Whitespace@34..35 " "
      Alias@35..38
        Ident@35..36 "v"
        Ascii40@36..37 "("
        Ident@37..38 "r"
    Ascii41@38..39 ")"
    Whitespace@39..40 " "
    Left@40..44 "LEFT"
    Whitespace@44..45 " "
    Join@45..49 "JOIN"
    Whitespace@49..50 " "
    RangeFunction@50..67
      List@50..67
        FuncCall@50..67
          Ident@50..61 "rngfunc_mat"
          Ascii40@61..62 "("
          AConst@62..64
            Iconst@62..64 "11"
          Ascii44@64..65 ","
          AConst@65..67
            Iconst@65..67 "13"
    Ascii41@67..68 ")"
    Whitespace@68..69 " "
    On@69..71 "ON"
    Whitespace@71..72 " "
    Ascii40@72..73 "("
    AExpr@73..81
      AExpr@73..76
        ColumnRef@73..74
          Ident@73..74 "r"
        Ascii43@74..75 "+"
        ColumnRef@75..76
          Ident@75..76 "i"
      Ascii41@76..77 ")"
      Ascii60@77..78 "<"
      AConst@78..81
        Iconst@78..81 "100"
  Ascii59@81..82 ";"

