crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@179.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM (VALUES (1),(2),(3)) v(r) LEFT JOIN generate_series(11,13) f(i) ON (r+i)<100;"
---
SelectStmt@0..91
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  JoinExpr@15..90
    RangeSubselect@15..38
      SelectStmt@15..32
        Values@15..21 "VALUES"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        List@23..24
          AConst@23..24
            Iconst@23..24 "1"
        Ascii41@24..25 ")"
        Ascii44@25..26 ","
        Ascii40@26..27 "("
        List@27..28
          AConst@27..28
            Iconst@27..28 "2"
        Ascii41@28..29 ")"
        Ascii44@29..30 ","
        Ascii40@30..31 "("
        List@31..32
          AConst@31..32
            Iconst@31..32 "3"
      Ascii41@32..33 ")"
      Ascii41@33..34 ")"
      Whitespace@34..35 " "
      Alias@35..38
        Ident@35..36 "v"
        Ascii40@36..37 "("
        Ident@37..38 "r"
    Ascii41@38..39 ")"
    Whitespace@39..40 " "
    Left@40..44 "LEFT"
    Whitespace@44..45 " "
    Join@45..49 "JOIN"
    Whitespace@49..50 " "
    RangeFunction@50..76
      List@50..71
        FuncCall@50..71
          Ident@50..65 "generate_series"
          Ascii40@65..66 "("
          AConst@66..68
            Iconst@66..68 "11"
          Ascii44@68..69 ","
          AConst@69..71
            Iconst@69..71 "13"
      Ascii41@71..72 ")"
      Whitespace@72..73 " "
      Alias@73..76
        Ident@73..74 "f"
        Ascii40@74..75 "("
        Ident@75..76 "i"
    Ascii41@76..77 ")"
    Whitespace@77..78 " "
    On@78..80 "ON"
    Whitespace@80..81 " "
    Ascii40@81..82 "("
    AExpr@82..90
      AExpr@82..85
        ColumnRef@82..83
          Ident@82..83 "r"
        Ascii43@83..84 "+"
        ColumnRef@84..85
          Ident@84..85 "i"
      Ascii41@85..86 ")"
      Ascii60@86..87 "<"
      AConst@87..90
        Iconst@87..90 "100"
  Ascii59@90..91 ";"

