crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@181.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM (VALUES (1),(2),(3)) v(r) LEFT JOIN unnest(array[10,20,30]) f(i) ON (r+i)<100;"
---
SelectStmt@0..92
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  JoinExpr@15..91
    RangeSubselect@15..38
      SelectStmt@15..32
        Values@15..21 "VALUES"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        List@23..24
          AConst@23..24
            Iconst@23..24 "1"
        Ascii41@24..25 ")"
        Ascii44@25..26 ","
        Ascii40@26..27 "("
        List@27..28
          AConst@27..28
            Iconst@27..28 "2"
        Ascii41@28..29 ")"
        Ascii44@29..30 ","
        Ascii40@30..31 "("
        List@31..32
          AConst@31..32
            Iconst@31..32 "3"
      Ascii41@32..33 ")"
      Ascii41@33..34 ")"
      Whitespace@34..35 " "
      Alias@35..38
        Ident@35..36 "v"
        Ascii40@36..37 "("
        Ident@37..38 "r"
    Ascii41@38..39 ")"
    Whitespace@39..40 " "
    Left@40..44 "LEFT"
    Whitespace@44..45 " "
    Join@45..49 "JOIN"
    Whitespace@49..50 " "
    RangeFunction@50..77
      List@50..71
        FuncCall@50..71
          Ident@50..56 "unnest"
          Ascii40@56..57 "("
          AArrayExpr@57..71
            Array@57..62 "array"
            Ascii91@62..63 "["
            AConst@63..65
              Iconst@63..65 "10"
            Ascii44@65..66 ","
            AConst@66..68
              Iconst@66..68 "20"
            Ascii44@68..69 ","
            AConst@69..71
              Iconst@69..71 "30"
      Ascii93@71..72 "]"
      Ascii41@72..73 ")"
      Whitespace@73..74 " "
      Alias@74..77
        Ident@74..75 "f"
        Ascii40@75..76 "("
        Ident@76..77 "i"
    Ascii41@77..78 ")"
    Whitespace@78..79 " "
    On@79..81 "ON"
    Whitespace@81..82 " "
    Ascii40@82..83 "("
    AExpr@83..91
      AExpr@83..86
        ColumnRef@83..84
          Ident@83..84 "r"
        Ascii43@84..85 "+"
        ColumnRef@85..86
          Ident@85..86 "i"
      Ascii41@86..87 ")"
      Ascii60@87..88 "<"
      AConst@88..91
        Iconst@88..91 "100"
  Ascii59@91..92 ";"

