crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@184.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM (VALUES (1),(2),(3)) v(r), rngfunc_sql(10+r,13);"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  RangeSubselect@15..38
    SelectStmt@15..32
      Values@15..21 "VALUES"
      Whitespace@21..22 " "
      Ascii40@22..23 "("
      List@23..24
        AConst@23..24
          Iconst@23..24 "1"
      Ascii41@24..25 ")"
      Ascii44@25..26 ","
      Ascii40@26..27 "("
      List@27..28
        AConst@27..28
          Iconst@27..28 "2"
      Ascii41@28..29 ")"
      Ascii44@29..30 ","
      Ascii40@30..31 "("
      List@31..32
        AConst@31..32
          Iconst@31..32 "3"
    Ascii41@32..33 ")"
    Ascii41@33..34 ")"
    Whitespace@34..35 " "
    Alias@35..38
      Ident@35..36 "v"
      Ascii40@36..37 "("
      Ident@37..38 "r"
  Ascii41@38..39 ")"
  Ascii44@39..40 ","
  Whitespace@40..41 " "
  RangeFunction@41..60
    List@41..60
      FuncCall@41..60
        Ident@41..52 "rngfunc_sql"
        Ascii40@52..53 "("
        AExpr@53..57
          AConst@53..55
            Iconst@53..55 "10"
          Ascii43@55..56 "+"
          ColumnRef@56..57
            Ident@56..57 "r"
        Ascii44@57..58 ","
        AConst@58..60
          Iconst@58..60 "13"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

